Bug 501435 - The icon for "Open Terminal Here" is always Konsole regardless of user's actual default terminal emulator
Summary: The icon for "Open Terminal Here" is always Konsole regardless of user's actu...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-13 07:48 UTC by SC
Modified: 2026-08-07 10:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Doesn't work on Fedora KDE (103.61 KB, image/png)
2025-06-21 16:02 UTC, Angad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description SC 2025-03-13 07:48:32 UTC
SUMMARY

In the right click context menu of dolphin, the "Open terminal Here" entry always uses the Konsole icon regardless of what the actual default terminal emulator is set to. Note that when clicked, it actually does use the user's custom default. So it's just the visual inconsistency that's a problem.

STEPS TO REPRODUCE

1. On a  KDE install, install Alacritty
2. Graphically set Alacritty as the default terminal emulator
3. Right click on the empty area of the file list in dolphin

OBSERVED RESULT

The icon for "Open terminal here" is still Konsole and not Alacritty

EXPECTED RESULT

The icon should be Alacritty

SOFTWARE/OS VERSIONS

Operating System: EndeavourOS 
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.12.18-1-lts (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2025-03-15 02:37:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/935
Comment 2 Méven 2025-03-17 08:14:58 UTC
Git commit eaaeb1b7629cc3c59933101d24dd0c2c67ef1276 by Méven Car, on behalf of Angus McLean.
Committed on 17/03/2025 at 08:14.
Pushed by meven into branch 'master'.

contextmenu: Use default terminal's icons for "Open Terminal" and "Open Terminal Here" actions

The "Open Terminal" and "Open Terminal Here" actions now use the icon of the user default terminal emulator application, instead of always using the "utilities-terminal" icon.

M  +9    -2    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/eaaeb1b7629cc3c59933101d24dd0c2c67ef1276
Comment 3 Angad 2025-06-21 16:02:51 UTC
Created attachment 182490 [details]
Doesn't work on Fedora KDE
Comment 4 Angad 2025-06-21 16:06:00 UTC
Even after the PR has been merged 3 months before still it doesn't work on my system and the the second entry to open terminal in picture in the attachment is label added by ghossty it's a separate issue that I have reported previously #501134

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.14.11-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-10210U CPU @ 1.60GHz
Memory: 8 GiB of RAM (7.6 GiB usable)
Graphics Processor 1: NVIDIA GeForce MX350
Graphics Processor 2: Intel® UHD Graphics
Manufacturer: TIMI
Product Name: Mi NoteBook Horizon Edition 14
Comment 5 Nate Graham 2025-07-23 15:38:18 UTC
I've proposed reverting that change and fixing it in a different way in https://invent.kde.org/system/dolphin/-/merge_requests/1003.
Comment 6 Méven 2025-07-24 09:31:51 UTC
(In reply to Angad from comment #4)
> Even after the PR has been merged 3 months before still it doesn't work on
> my system and the the second entry to open terminal in picture in the
> attachment is label added by ghossty it's a separate issue that I have
> reported previously #501134
> 
> Operating System: Fedora Linux 42

This hasn't been cherry-picked, so you probably didn't test the patch.
It is only in 25.08, currently.
Comment 7 Méven 2026-08-07 10:17:31 UTC
Git commit 62b12e9c307372100a7e70176abd45f6628d1b2b by Méven Car, on behalf of Bharadwaj Raju.
Committed on 07/08/2026 at 10:17.
Pushed by meven into branch 'master'.

Fix icon lookup for "Open Terminal" actions

Using KDesktopFile to read the desktop entry from a desktop name (i.e.
"org.something.terminalapp.desktop") is incorrect; KDesktopFile is for
making modifications to a desktop entry, and hence does not even try to
find existing desktop entries in the correct places.
See src/core/kdesktopfile.cpp in the KConfig source code, particularly
the call to KConfigPrivate::changeFileName.

The result of this is that ultimately it does not find desktop entries
located in /usr/share/applications or the Flatpak equivalent, and hence
fails to locate icons.

Instead, use KService::serviceByStorageId.

Steps to reproduce:
  1. Install a terminal app like WezTerm
  2. Set it as default in System Settings > Default Applications
  3. Right click inside a folder in Dolphin
  4. Observe the lack of an icon
Related: bug 436178

M  +3    -3    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/62b12e9c307372100a7e70176abd45f6628d1b2b