contextmenu: Use default terminal's icons for "Open Terminal" and "Open Terminal Here" actions

The "Open Terminal" and "Open Terminal Here" actions now use the icon of the user default terminal emulator application, instead of always using the "utilities-terminal" icon.

BUG: 501435